# GitProjectManager

./: .gitignore  Cargo.toml  README.md
src/: main.rs  project_manager.py
